--- a/hobby container.html
+++ b/hobby container.html
@@ -51,7 +51,7 @@
         color: rgb(255, 87, 51);
       }
     </style>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body style="background-color: rgb(255, 228, 232)">
     <center>
